--- a/src/limecv.dtx
+++ b/src/limecv.dtx
@@ -1847,7 +1847,7 @@ Dear Miss.\ Smith
 %
 %    \begin{macrocode}
 \NewDocumentEnvironment{cvAwards}{}{%
-  \cv@Title{\pdfkeysvalueof{/@cv/names/awardscerts}}{\faAward}
+  \cv@Title{\pgfkeysvalueof{/@cv/names/awardscerts}}{\faAward}
   \stepcounter{cv@itemPrev}
   \stepcounter{cv@itemNext}
   \cv@definecvItem
